--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,3 +1,29 @@
+/* ~ Main CSS */
+
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow-x: hidden;
+}    
+
+/* ~ Footer - ini agar posisi footer bisa di bawah */
+
+#app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
+div a {
+    text-decoration: none;
+    color: white;
+}
+
+
 .healsync-footer {
   background-color: #667eea;
   padding: 40px 60px 20px;
@@ -16,7 +42,7 @@
   margin-bottom: 20px;
 }
 
-.footer-section h4 {
+.footer-section h3 {
   font-weight: bold;
   margin-bottom: 10px;
 }
