--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -18,12 +18,6 @@ main {
     flex: 1;
 }
 
-div a {
-    text-decoration: none;
-    color: white;
-}
-
-
 .healsync-footer {
   background-color: #667eea;
   padding: 40px 60px 20px;
@@ -66,36 +60,23 @@ div a {
 
 /* Footer Bottom Terpisah 3 Kolom */
 .footer-bottom {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
+  gap: 1rem;
   padding-top: 20px;
   margin-top: 20px;
   border-top: 1px solid #eee;
-  flex-wrap: wrap;
 }
 
-.footer-left,
-.footer-center,
-.footer-right {
-  flex: 1;
-  margin: 6px 0;
+.footer-text {
+    justify-self: start;
 }
-
-.footer-left {
-  text-align: left;
-  font-size: 13px;
-  color: #ffff;
-}
-
 .footer-center {
-  text-align: center;
-  font-size: 13px;
-  color: #fff;
+    justify-self: center;
 }
-
-.footer-right {
-  text-align: right;
+.footer-icons {
+    justify-self: end;
 }
 
 .footer-icons {
@@ -135,4 +116,10 @@ div a {
   .footer-icons {
     justify-content: center;
   }
+}
+
+div a {
+    color: #fff;
+    text-decoration: underline;
+    text-decoration-color: white;
 }
