--- a/public/css/about.css
+++ b/public/css/about.css
@@ -145,7 +145,7 @@ ol {
 }
 
 .fitur-section {
-    background-color: #d5ebef; /* atau #c9e4ec sesuai figma */
+    background-color: #d5ebef; 
     padding: 80px 30px;
     text-align: center;
 }
