--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,12 +1,12 @@
 body {
     font-family: 'Segoe UI', sans-serif;
-    background-color: #fefefe;
+    background-color:#dbeafe;
     margin: 0;
     padding: 0;
     color: #333;
 }
 
-.container {
+.about-container {
     max-width: 1100px;
     margin: 0 auto;
     padding: 60px 30px;
@@ -135,7 +135,7 @@ ol {
 
 /* Gambar Pohon */
 .tree-image {
-    margin-top: 60px;
+    margin-top: 30px;
     text-align: left;
 }
 
