--- a/public/css/artikel.css
+++ b/public/css/artikel.css
@@ -1,7 +1,7 @@
 /* Google Fonts */
 body {
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(180deg, #edf6f9 0%, #ffffff 100%);
+  background: linear-gradient(180deg, #d6eaf8 0%, #f2f4f6 100%);
   color: #2f3e46;
   margin: 0;
   padding: 0;
