--- a/resources/css/page-css/index.css
+++ b/resources/css/page-css/index.css
@@ -3,7 +3,7 @@
 }
 
 .hero-inner{
-    height:100dvh;           /* full‑viewport dengan dvh (aman iOS) */
+    height:100dvh;       
     display:flex;
     align-items:center;
 }
@@ -20,13 +20,13 @@
 
 .cards-group{
     display:flex;
-    gap:1.5rem;          /* jarak antar‑kartu */
+    gap:1.5rem;          
     flex-wrap:wrap;
     margin-top:1.75rem;
 }
 
 .card-konseling{
-    width:230px;         /* lebar tetap → tidak kurus lagi */
+    width:230px;    
     background-color: rgba(209, 255, 254, 1)    ;
     border:1px solid #c8ddff;
     border-radius:18px;
@@ -83,7 +83,16 @@
     border: 2px dashed #96c1e6;
     border-radius: 50%;
     margin: 0 auto;
-    transition: transform 0.3s ease;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-placeholder img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .img-placeholder:hover {
