--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -78,3 +78,8 @@ ul.navbar-nav .nav-link.active::after {
     background: linear-gradient(90deg,rgba(209, 255, 254, 1) 0%, rgba(88, 233, 255, 1) 70%, rgba(0, 221, 255, 1) 100%);
     border-radius: 25px;
 }
+
+body.swal2-shown {
+    padding-right: 0 !important;
+    overflow: hidden !important;
+}
