Membuat halaman admin, Membuat seeder untuk role, Membuat role sistem, Membuat halaman tambah mentor dengan tampilan index sistem pagination dan menggunakan include table ajax agad smooth reload, Menambahkan SweetAlert di beberapa kondisi

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -68,6 +68,15 @@ ul.navbar-nav .nav-link.active::after {
     max-width: 100%;
 }
 
+.avatar-img {
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.navbar-nav .nav-link.no-underline::after {
+    display: none !important;
+}
+
 /* ~ Scrollbar */
 ::-webkit-scrollbar {
     background-color: white;
