--- a/resources/css/pelayanan/index.css
+++ b/resources/css/pelayanan/index.css
@@ -65,6 +65,21 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
+.img-wrapper i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 64px;
+  color: #00B2FF;
+
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 3px solid #00B2FF;
+  background-color: white;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
 .card-content {
     margin-top: 20px; 
 }
