Finalisasi Fitur Utama dan Memperbaiki Struktur Folder serta Merapikan Codingan

--- a/resources/css/admin/users/index.css
+++ b/resources/css/admin/users/index.css
@@ -1,10 +1,7 @@
-.user-management-container {
-background: #7F7FD5;
-background: -webkit-linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
-background: linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
-  padding: 40px;
-  border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+body {
+    background: #7F7FD5;
+    background: -webkit-linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
+    background: linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
 }
 
 .table-custom {
@@ -97,7 +94,6 @@ background: linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
   color: white;
   border: none;
 }
-
 
 .badge.bg-danger {
   background-color: #e53935 !important;
